Use less mem in marathon json and restrict resources in zeppelin env.
DRIVER_MEMORY=1536M is xmx for driver program (note: it is part of
all memory allocated by marathon json for zeppelin).

EXECUTOR_MEMORY="2560M" is memory that will be booked by executor
on each mesos agent (+10% or 384M, see spark.mesos.executor.memoryOverhead)

CORES_MAX=6 restrict to use at most 6 cores across all
executors (otherwise spark will allocate all available
cores that mesos offers)

Using coarse mode.

ZEPPELIN_MEM="-Xmx1024m -XX:MaxPermSize=512m" zeppelin server mem

ZEPPELIN_INTP_MEM="-Xmx$DRIVER_MEMORY -XX:MaxPermSize=512m" use as much
as driver memory

ZEPPELIN_JAVA_OPTS configures
- spark executor memory
- driver's memory (becuase zeppelin server launches driver as subprocess)
- executor's memory
- restrict num of cores to use across all executors (via CORES_MAX)
- changes spark ui port to PORT0 or default 4040